--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,13 @@
   "description": "Simple PSR-3 based logger",
   "keywords": [
     "psr-3",
-    "logger"
+    "log",
+    "logging"
   ],
   "homepage": "https://github.com/pragnesh87/jiffy-logger",
   "type": "library",
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "psr/log": "^1.1"
   },
   "license": "MIT",
@@ -22,5 +23,6 @@
     "psr-4": {
       "Jiffy\\Logger\\": "src/"
     }
-  }
+  },
+  "minimum-stability": "dev"
 }
