--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,6 @@
       "Jiffy\\Logger\\": "src/"
     }
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
