--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
       "Jiffy\\Logger\\": "src/"
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
